[package]
name = "yex-ffi-module-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
yex = { git = "https://github.com/nonamescm/yex-lang", version = "0.1.0", package = "vm" }
